--- a/EditarPerfil.html
+++ b/EditarPerfil.html
@@ -3,15 +3,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="EditarPerfil.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Edite seu perfil</title>
 </head>
 
 <body>
-    <header class="header">
-
-    </header>
+    <header>
+        <img id="logo" src="avali8br.png" alt="Logo da avali8">
+        <ul>
+          <div class="dropdown">
+            <button class="dropbtn"><i class="material-icons">menu</i></button>
+            <div class="dropdown-content">
+              <a href="#">Página inicial</a>
+              <a href="#">Meu Perfil</a>
+              <a href="#">Editar Perfil</a>
+              <a href="#">Sair</a>
+            </div>
+          </div>
+        </ul>
+        <p id="username">Joaquim</p>
+        <div class="line">
+  
+        </div>
+      </header>
 </body>
 
 </html>
