--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -2,28 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
     <link rel="stylesheet" href="perfil.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   </head>
   <body>
+    <script src="header.js"></script>
+    <script src="perfil.js"></script>
     <header>
-      <img id="logo" src="avali8br.png" alt="Logo da avali8">
+      <img id="logo" src="img/avali8br.png" alt="Logo da avali8">
       <ul>
-        <p id="username">Joaquim</p>
+        <p id="username1"></p>
         <div class="dropdown">
-          <button class="dropbtn"><i class="material-icons">menu</i></button>
-          <div class="dropdown-content">
-            <a href="#">Página inicial</a>
-            <a href="#">Meu Perfil</a>
-            <a href="#">Editar Perfil</a>
-            <a href="#">Sair</a>
-          </div>
+          <button type="button" class="dropbtn" onclick="displayDropDownCont('drop')"><i class="material-icons">menu</i></button>
         </div>
       </ul>
-      <div class="line">
-
+      <div id="drop" class="dropdown-content">
+        <a href="#">Página inicial</a>
+        <a href="#">Meu Perfil</a>
+        <a href="#">Editar Perfil</a>
+        <a href="#">Sair</a>
       </div>
+      <div class="line"></div>
     </header>
     <div class="background">
       <div class="main">
@@ -33,21 +35,21 @@
           </div>
           <div class="perfilcontent">
             <div class="avatarcontainer">
-              <img src="avatar-png-18.png" alt="Foto Avatar">
+              <img src="img/avatar-png-18.png" alt="Foto Avatar">
             </div>
             <div class="editarfotocontainer">
               <button id="editarfoto" type="button" name="button">Editar Foto</button>
             </div>
-            <p id="username">Fulano</p>
-            <p id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consequat velit lorem, quis tristique mi mollis vitae. Cras consequat id ante vitae vehicula. Cras at elit tincidunt, auctor dolor eu, facilisis eros. Curabitur non consectetur tellus. Sed leo arcu, rhoncus nec lobortis vel, convallis et elit.</p>
+            <p id="username2"></p>
+            <p id="bio"></p>
             <div class="editardescriçãocontainer">
-              <button id="editardescrição" type="button" name="button">Editar descrição</button>
+              <button id="editardescrição" onclick="displayEditarPerfil('editarbio')" type="button" name="button">Editar descrição</button>
             </div>
             <div class="redessocias">
               <ul>
-                <a href="#"><img id="facebook" src="facebookicon.png"></a>
-                <a href="#"><img id="linkedin" src="linkedinicon.png"></a>
-                <a href="#"><img id="twitter" src="twittericon.png"></a>
+                <a href="#"><img id="facebook" src="img/facebookicon.png"></a>
+                <a href="#"><img id="linkedin" src="img/linkedinicon.png"></a>
+                <a href="#"><img id="twitter" src="img/twittericon.png"></a>
               </ul>
             </div>
           </div>
@@ -58,28 +60,15 @@
           </div>
           <div class="medalhascontent">
             <div class="quadrodemedalhas">
-              <ul>
-                <li> <p>Certificação 1</p></li>
-                <li> <p>Certificação 2</p></li>
-                <li> <p>Certificação 3</p></li>
-                <li> <p>Certificação 4</p></li>
-                <li> <p>Certificação 5</p></li>
-                <li> <p>Certificação 6</p></li>
-                <li> <p>Certificação 7</p></li>
-                <li> <p>Certificação 8</p></li>
-                <li> <p>Certificação 9</p></li>
-                <li> <p>Certificação 10</p></li>
-                <li> <p>Certificação 11</p></li>
-                <li> <p>Certificação 12</p></li>
-                <li> <p>Certificação 13</p></li>
-                <li> <p>Certificação 14</p></li>
-              </ul>
             </div>
           </div>
-          <div class="exemplomedalhas">
-            <img src="exemplo_medalhas.png" alt="">
-          </div>
         </div>
+      </div>
+      <div id="editarbio" style="text-align:center;position: relative;top: 48.2%;margin-left: 21%;background-color: rgb(240,240,240); width: 28%;display:none">
+        <form action="" method="post">
+          <textarea id="myText" maxlength="308" rows="10" cols="25"></textarea>
+        </form>
+        <button type="submit" onclick="document.getElementById('editarbio').style.display = 'none'; attBio()" name="button">Enviar</button>
       </div>
     </div>
   </body>
