função de preenchimento de medalhas implementada

--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -58,8 +58,12 @@
           <div class="medalhasheader">
           <p>Medalhas</p>
           </div>
-          <div class="medalhascontent">
-            <div class="quadrodemedalhas">
+          <div class="medalhascontent" style="display:flex">
+            <div id="certificações" class="certificações" style="width:40%;height:92%;margin-left:10%; margin-top:4.8%;position:relative;z-index:1">
+
+            </div>
+            <div id="quadro" class="quadrodemedalhas" style="width:10%;height:92%;margin-left:20%; margin-top:5%;position:relative;z-index:1">
+              
             </div>
           </div>
         </div>
