--- a/Cadastro.html
+++ b/Cadastro.html
@@ -18,7 +18,7 @@
         <a href="Contato.html" class ="Botao" id="Contato">contato</a>
       </ul>
     </div>
-
+    <div class="line"></div>
     <div class="content">
       <!--FORMULÁRIO DE CADASTRO-->
       <div id="cadastro">
