--- a/Cadastro.html
+++ b/Cadastro.html
@@ -5,7 +5,9 @@
   <title>Crie sua conta no avali8!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="Cadastro.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
+
 <body>
     <script src="Cadastro.js"></script>
   <div class="container">
