preparando ambiente para testes unitários

--- a/EditarPerfil.html
+++ b/EditarPerfil.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="EditarPerfil.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Edite seu perfil</title>
 </head>
 
