criando suite de testes

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -48,7 +48,7 @@
             </p>
 
             <p id="caixadobotao"> 
-              <input type="submit" id="submit" name="SignUp" value="SignUp" onclick="confirmPassword()"> 
+              <input type="submit" id="submit" name="SignUp" value="SignUp" onclick="getPass()"> 
             </p>
             <!--
             <p class="link">  
