--- a/fazer-prova/fazer-prova.html
+++ b/fazer-prova/fazer-prova.html
@@ -31,67 +31,66 @@
         <form action="">
             <h3 id = "prova" style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</h3>
             <p id = "enunciado1" class="enunciado" style="text-align: center;">Questão 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox1a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox1b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox1c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox1d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox1e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox1a" type="radio" name="1" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox1b" type="radio" name="1" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox1c" type="radio" name="1" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox1d" type="radio" name="1" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox1e" type="radio" name="1" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado2" class="enunciado" style="text-align: center;">Questão 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox2a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox2b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox2c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox2d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox2e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox2a" type="radio" name="2" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox2b" type="radio" name="2" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox2c" type="radio" name="2" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox2d" type="radio" name="2" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox2e" type="radio" name="2" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado3" class="enunciado" style="text-align: center;">Questão 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox3a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox3b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox3c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox3d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox3e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox3a" type="radio" name="3" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox3b" type="radio" name="3" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox3c" type="radio" name="3" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox3d" type="radio" name="3" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox3e" type="radio" name="3" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado4" class="enunciado" style="text-align: center;">Questão 4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox4a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox4b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox4c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox4d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox4e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox4a" type="radio" name="4" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox4b" type="radio" name="4" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox4c" type="radio" name="4" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox4d" type="radio" name="4" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox4e" type="radio" name="4" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado5" class="enunciado" style="text-align: center;">Questão 5. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox5a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox5b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox5c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox5d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox5e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox5a" type="radio" name="5" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox5b" type="radio" name="5" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox5c" type="radio" name="5" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox5d" type="radio" name="5" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox5e" type="radio" name="5" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado6" class="enunciado" style="text-align: center;">Questão 6. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox6a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox6b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox6c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox6d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox6e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox6a" type="radio" name="6" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox6b" type="radio" name="6" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox6c" type="radio" name="6" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox6d" type="radio" name="6" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox6e" type="radio" name="6" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado7" class="enunciado" style="text-align: center;">Questão 7. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox7a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox7b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox7c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox7d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox7e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox7a" type="radio" name="7" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox7b" type="radio" name="7" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox7c" type="radio" name="7" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox7d" type="radio" name="7" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox7e" type="radio" name="7" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado8" class="enunciado" style="text-align: center;">Questão 8. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox8a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox8b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox8c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox8d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox8e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox8a" type="radio" name="8" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox8b" type="radio" name="8" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox8c" type="radio" name="8" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox8d" type="radio" name="8" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox8e" type="radio" name="8" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado9" class="enunciado" style="text-align: center;">Questão 9. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox9a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox9b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox9c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox9d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox9e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox9a" type="radio" name="9" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox9b" type="radio" name="9" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox9c" type="radio" name="9" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox9d" type="radio" name="9" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox9e" type="radio" name="9" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
             <p id = "enunciado10" class="enunciado" style="text-align: center;">Questão 10. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae magna eu erat porttitor pharetra in in diam. Sed iaculis, velit et molestie sodales, orci est pretium nunc, id ornare.</p>
-            <label id = "checkbox10a"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox10b"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox10c"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox10d"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
-            <label id = "checkbox10e"><input type="checkbox" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>  
-            <button type="submit" style="margin: auto;position: relative;">Enviar</button>
-            <input type="image" name="k" id="0">
+            <label><input id = "checkbox10a" type="radio" name="10" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox10b" type="radio" name="10" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox10c" type="radio" name="10" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox10d" type="radio" name="10" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>
+            <label><input id = "checkbox10e" type="radio" name="10" value="1a" />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae.</label>  
+            <button type="button" onclick="validar()" style="margin: auto;position: relative;width:60%;height: 40%;">Enviar</button>
         </form>
     </div>
   </body>
