União com o back

--- a/tela-inicial-logado/tela-inicial-logado.html
+++ b/tela-inicial-logado/tela-inicial-logado.html
@@ -24,7 +24,7 @@
         <a href="#">Página inicial</a>
         <a href="#">Meu Perfil</a>
         <a href="#">Editar Perfil</a>
-        <a href="#">Sair</a>
+        <a href="#" onclick="logout()">Sair</a>
       </div>
       <div class="line"></div>
     </header>
