--- a/tela-inicial-logado/tela-inicial-logado.html
+++ b/tela-inicial-logado/tela-inicial-logado.html
@@ -21,9 +21,9 @@
         </div>
       </ul>
       <div id="drop" class="dropdown-content">
-        <a href="#">Página inicial</a>
-        <a href="#">Meu Perfil</a>
-        <a href="#">Editar Perfil</a>
+        <a href="#" onclick="inicial()">Página inicial</a>
+        <a href="#" onclick="perfil()">Meu Perfil</a>
+        <a href="#" onclick="editarPerfil()">Editar Perfil</a>
         <a href="#" onclick="logout()">Sair</a>
       </div>
       <div class="line"></div>
