Navegação e União com o Back implementadas

--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -20,10 +20,10 @@
         </div>
       </ul>
       <div id="drop" class="dropdown-content">
-        <a href="#">Página inicial</a>
-        <a href="#">Meu Perfil</a>
-        <a href="#">Editar Perfil</a>
-        <a href="#">Sair</a>
+        <a href="#" onclick="inicial()">Página inicial</a>
+        <a href="#" onclick="perfil()">Meu Perfil</a>
+        <a href="#" onclick="editarPerfil()">Editar Perfil</a>
+        <a href="#" onclick="logout()">Sair</a>
       </div>
       <div class="line"></div>
     </header>
