Tela fazer simulado adicionada

--- a/tela-inicial-logado/tela-inicial-logado.html
+++ b/tela-inicial-logado/tela-inicial-logado.html
@@ -33,7 +33,7 @@
         <div class="resolver-simulado">
           <h5>Resolver Simulado</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum risus vel suscipit tempor. Donec et vulputate quam. Nullam condimentum felis orci, vehicula lacinia diam porttitor sit amet. Ut quis justo id.</p>
-          <button type="button" name="button" onclick="">Simulado</button>
+          <button onclick="window.location.replace('tela-inicial-logado-fazer-simulado.html')" type="button" name="button" onclick="">Simulado</button>
         </div>
         <div class="banco-questões">
           <h5>Banco de Questões</h5>
@@ -52,6 +52,6 @@
        <div id="ranking" class="ranking-content" style="height:400px;margin:auto">
        </div>
       </div>
-    </div>
+  </div>
   </body>
 </html>
