--- a/Release/Avali8-FE/fazerprova/fazer-prova.html
+++ b/Release/Avali8-FE/fazerprova/fazer-prova.html
@@ -20,10 +20,10 @@
         </div>
         </ul>
         <div id="drop" class="dropdown-content">
-        <a href="#">Home</a>
-        <a href="#">Profile</a>
-        <a href="#">Edit Profile</a>
-        <a href="#">Log out</a>
+          <a href="#" onclick="inicial()">Home</a>
+          <a href="#" onclick="perfil()">My Profile</a>
+          <a href="#" onclick="editarPerfil()">Edit Profile</a>
+          <a href="#" onclick="logout()">Log out</a>
         </div>
         <div class="line"></div>
     </header>
