--- a/Release/Avali8-FE/perfil/perfil.html
+++ b/Release/Avali8-FE/perfil/perfil.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="perfil.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -20,10 +20,10 @@
         </div>
       </ul>
       <div id="drop" class="dropdown-content">
-        <a href="#" onclick="inicial()">Página inicial</a>
-        <a href="#" onclick="perfil()">Meu Perfil</a>
-        <a href="#" onclick="editarPerfil()">Editar Perfil</a>
-        <a href="#" onclick="logout()">Sair</a>
+        <a href="#" onclick="inicial()">Home</a>
+        <a href="#" onclick="perfil()">My Profile</a>
+        <a href="#" onclick="editarPerfil()">Edit Profile</a>
+        <a href="#" onclick="logout()">Log out</a>
       </div>
       <div class="line"></div>
     </header>
@@ -31,19 +31,19 @@
       <div class="main">
         <div class="perfil">
           <div class="perfilheader">
-          <p>Meu Perfil</p>
+          <p>My Profile</p>
           </div>
           <div class="perfilcontent">
             <div class="avatarcontainer">
               <img src="img/avatar-png-18.png" alt="Foto Avatar">
             </div>
             <div class="editarfotocontainer">
-              <button id="editarfoto" type="button" name="button">Editar Foto</button>
+              <button id="editarfoto" type="button" name="button">Edit Picture</button>
             </div>
             <p id="username2"></p>
             <p id="bio"></p>
             <div class="editardescriçãocontainer">
-              <button id="editardescrição" onclick="displayEditarPerfil('editarbio')" type="button" name="button">Editar descrição</button>
+              <button id="editardescrição" onclick="displayEditarPerfil('editarbio')" type="button" name="button">Edit Bio</button>
             </div>
             <div class="redessocias">
               <ul>
@@ -56,7 +56,7 @@
         </div>
         <div class="medalhas">
           <div class="medalhasheader">
-          <p>Medalhas</p>
+          <p>Badges</p>
           </div>
           <div class="medalhascontent" style="display:flex">
             <div id="certificações" class="certificações" style="width:40%;height:92%;margin-left:10%; margin-top:4.8%;position:relative;z-index:1">
