--- a/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado-fazer-simulado.html
+++ b/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado-fazer-simulado.html
@@ -21,20 +21,20 @@
         </div>
       </ul>
       <div id="drop" class="dropdown-content">
-        <a href="#" onclick="inicial()">Página inicial</a>
-        <a href="#" onclick="perfil()">Meu Perfil</a>
-        <a href="#" onclick="editarPerfil()">Editar Perfil</a>
-        <a href="#" onclick="logout()">Sair</a>
+        <a href="#" onclick="inicial()">Home</a>
+        <a href="#" onclick="perfil()">My Profile</a>
+        <a href="#" onclick="editarPerfil()">Edit Profile</a>
+        <a href="#" onclick="logout()">Log out</a>
       </div>
       <div class="line"></div>
     </header>
     <div class="background">
-      <p style="color:#2A2A2A;font-size: large;margin-left: 5%;">Qual simulado deseja fazer?</p>
+      <p style="color:#2A2A2A;font-size: large;margin-left: 5%;">Which exam do you want to do?</p>
       <div id="simulados" style="width:100%;margin:auto;text-align: center;display:table-cell">
         
       </div>
       <br><br>
-      <a onclick="window.location.replace('tela-inicial-logado.html')" style="float: right;margin-right:5%;">Cancelar</a>
+      <a onclick="window.location.replace('tela-inicial-logado.html')" style="float: right;margin-right:5%;">Cancel</a>
     </div>
   </body>
 </html>
