--- a/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado.html
+++ b/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado.html
@@ -21,29 +21,29 @@
         </div>
       </ul>
       <div id="drop" class="dropdown-content">
-        <a href="#" onclick="inicial()">Página inicial</a>
-        <a href="#" onclick="perfil()">Meu Perfil</a>
-        <a href="#" onclick="editarPerfil()">Editar Perfil</a>
-        <a href="#" onclick="logout()">Sair</a>
+        <a href="#" onclick="inicial()">Home</a>
+        <a href="#" onclick="perfil()">My Profile</a>
+        <a href="#" onclick="editarPerfil()">Edit Profile</a>
+        <a href="#" onclick="logout()">Log out</a>
       </div>
       <div class="line"></div>
     </header>
     <div class="background">
       <div class="main" style="display: flex">
         <div class="resolver-simulado">
-          <h5>Resolver Simulado</h5>
+          <h5>Solve Exam</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum risus vel suscipit tempor. Donec et vulputate quam. Nullam condimentum felis orci, vehicula lacinia diam porttitor sit amet. Ut quis justo id.</p>
-          <button onclick="window.location.replace('tela-inicial-logado-fazer-simulado.html')" type="button" name="button" onclick="">Simulado</button>
+          <button onclick="window.location.replace('tela-inicial-logado-fazer-simulado.html')" type="button" name="button" onclick="">Solve</button>
         </div>
         <div class="banco-questões">
-          <h5>Banco de Questões</h5>
+          <h5>Questions Database</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae libero erat. Morbi dictum luctus venenatis. In hac habitasse platea dictumst. Mauris quis ullamcorper lorem, vel varius risus. Sed feugiat nunc sapien.</p>
-          <button type="button" name="button" onclick="">Acesso</button>
+          <button type="button" name="button" onclick="">Acess</button>
         </div>
         <div class="sugerir-questão">
-          <h5>Sugerir Questão</h5>
+          <h5>Suggest Question</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae libero erat. Morbi dictum luctus venenatis. In hac habitasse platea dictumst. Mauris quis ullamcorper lorem, vel varius risus. Sed feugiat nunc sapien.</p>
-          <button type="button" name="button" onclick="">Sugerir</button>
+          <button type="button" name="button" onclick="">Suggest</button>
         </div>
       </div>
       <div class="ranking">
