--- a/Release/Avali8-FE/EditPerfil/EditarPerfil.html
+++ b/Release/Avali8-FE/EditPerfil/EditarPerfil.html
@@ -34,7 +34,7 @@
   </header>
 
   <div class="form" id="form">
-      <p id"TextEdit">Editt your Profile</p>
+      <p id="TextEdit">Edit your Profile</p>
 
       <ul>
         <p class="inputstext">Name <input id="nameinput" name="nome" class="input" required="required" type="text" placeholder="your name"> </p>
