--- a/Release/Avali8-FE/cadastro/Cadastro.html
+++ b/Release/Avali8-FE/cadastro/Cadastro.html
@@ -15,7 +15,7 @@
       <img src="img/avali8br.png" class="logo"> <!--Logo Avali8-->
       <ul id= "cabeca"> <!--Botões do cabeçalho-->  
         <a href="" class ="Botao" id="Home">home</a>
-        <a  class ="Botao" id="Login" onclick="window.location.replace('../login/login.html')" >login</a>
+        <a  class ="Botao" id="Login" onclick="window.location.assign('../login/login.html')" >login</a>
         <a href="" class ="Botao" id="Cadastro">sign up</a>
         <a href="" class ="Botao" id="Contato">contact</a>
       </ul>
