--- a/Release/Avali8-FE/login/login.html
+++ b/Release/Avali8-FE/login/login.html
@@ -14,7 +14,7 @@
       <ul>
         <a href="#">home</a>
         <a href="#">login</a>
-        <a href="#" onclick="window.location.replace('../cadastro/Cadastro.html')">sign up</a>
+        <a href="#" onclick="window.location.assign('../cadastro/Cadastro.html')">sign up</a>
         <a href="#">contact</a>
       </ul>
     </header>
