--- a/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado-fazer-simulado.html
+++ b/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado-fazer-simulado.html
@@ -34,7 +34,7 @@
         
       </div>
       <br><br>
-      <a onclick="window.location.replace('tela-inicial-logado.html')" style="float: right;margin-right:5%;">Cancel</a>
+      <a onclick="window.location.assign('tela-inicial-logado.html')" style="float: right;margin-right:5%;">Cancel</a>
     </div>
   </body>
 </html>
