--- a/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado.html
+++ b/Release/Avali8-FE/tela-inicial-logado/tela-inicial-logado.html
@@ -33,7 +33,7 @@
         <div class="resolver-simulado">
           <h5>Solve Exam</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum risus vel suscipit tempor. Donec et vulputate quam. Nullam condimentum felis orci, vehicula lacinia diam porttitor sit amet. Ut quis justo id.</p>
-          <button onclick="window.location.replace('tela-inicial-logado-fazer-simulado.html')" type="button" name="button" onclick="">Solve</button>
+          <button onclick="window.location.assign('tela-inicial-logado-fazer-simulado.html')" type="button" name="button" onclick="">Solve</button>
         </div>
         <div class="banco-questões">
           <h5>Questions Database</h5>
