finalização da tela de editar perfil

--- a/EditPerfil/EditarPerfil.html
+++ b/EditPerfil/EditarPerfil.html
@@ -35,7 +35,7 @@
   <div class="form" id="form">
       <p id"TextEdit">Edite seu perfil</p>
 
-      <ul>
+      <ul id="inputs">
         <p class="inputstext">Name <input id="nameinput" name="nome" class="input" required="required" type="text" placeholder="your name"> </p>
 
         <p class="inputstext">Email <input id="emailinput" name="email" class="input" required="required" type="email" placeholder="your email"> </p>
