--- a/Release/Avali8-FE/forgotpassword/forgotpass.html
+++ b/Release/Avali8-FE/forgotpassword/forgotpass.html
@@ -7,6 +7,7 @@
     <title>Recovery Password</title>
     <link rel="stylesheet" href="forgotpass.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="recovery.js"></script>
 </head>
 <body>
     <header>
@@ -19,17 +20,21 @@
     <div class="main">
         <div class="background">
             <div class="form-container">
-                <form action="#" method="POST" class="form-wrap">
+                <form action="recovery.html" class="form-wrap">
                     <h2>Enter your Email Address</h2>
                     <div class="form-box">
-                        <input type="text" placeholder="Enter Email" />
+                        <input type="text" placeholder="Enter Email">
                     </div>
                     <div class="form-submit">
-                        <input type="submit" value="Send"/>
+                        <input type="button" value="Send" onclick="window.location.replace('../forgotpassword/recovery.html')"> 
+                        <!--Modificar o input type para submit
+                        onclick= submitRecovery()
+                        submitRecovery(){... window.location.replace('../forgotpassword/recovery.html)')} -->
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </body>
+
 </html>
