--- a/Release/Avali8-FE/forgotpassword/recovery.html
+++ b/Release/Avali8-FE/forgotpassword/recovery.html
@@ -18,16 +18,14 @@
     </header>
     <div class="main">
         <div class="background">
-            <div class="form-container">
-                <form action="#" method="POST" class="form-wrap">
-                    <h2>Enter your Email Address</h2>
-                    <div class="form-box">
-                        <input type="text" placeholder="Enter Email" />
-                    </div>
-                    <div class="form-submit">
-                        <input type="submit" value="Send"/>
-                    </div>
-                </form>
+            <div class="box">
+                <div class="inner-box">
+                    <h3> Email Verification Link Has Been Sent</h3>
+                    <p style="text-align:center;"> We send verification link on your providing email address.</p>
+                    <p style="text-align:center;"> Please confirm your email address and login to your account.</p>
+                    <br>
+                    <p style="text-align: center;"> Go Back to <a class="link" onclick="window.location.replace('../login/login.html')">Login Page</a>
+                </div>
             </div>
         </div>
     </div>
